Fix:		Propagate dark mode to iframes

--- a/djangocms_admin_style/sass/settings/_cms.scss
+++ b/djangocms_admin_style/sass/settings/_cms.scss
@@ -35,6 +35,11 @@ $gray-super-lightest: var(--dca-gray-super-lightest); //;
 
 :root {
     color-scheme: dark light;
+}
+
+:root[data-color-scheme="light"] {
+    color-scheme: light;
+    --dca-light-mode: " ";
     --dca-white: #FFFFFF;
     --dca-black: #000000;
     --dca-primary: #00bbff;
@@ -47,18 +52,39 @@ $gray-super-lightest: var(--dca-gray-super-lightest); //;
     --dca-gray-super-lightest: #f7f7f7;
 }
 
+:root[data-color-scheme="dark"] {
+    color-scheme: dark;
+    --dca-dark-mode: " ";
+    --dca-white: #2A2C2E;
+    --dca-black: #FFF;
+    --dca-primary: #58D1FC;
+    --dca-gray: #999; // $gray-light;
+    --dca-gray-lightest: #444; //$gray-darkest;
+    --dca-gray-lighter: #666; //$gray-darker;
+    --dca-gray-light: #888; // $gray-light;
+    --dca-gray-darker: #aaa; //$gray;
+    --dca-gray-darkest: #eee; // $gray-lighter;
+    --dca-gray-super-lightest: #333;
+
+    --active-brightness: 2;
+    --focus-brightness: 1.5;
+}
 @media (prefers-color-scheme: dark) {
-   :root {
-       --dca-white: #2A2C2E;
-       --dca-black: #FFF;
-       --dca-primary: #58D1FC;
-       --dca-gray: #999; //$gray-light;
-       --dca-gray-lightest: #444; //$gray-darkest;
-       --dca-gray-lighter: #666; //$gray-darker;
-       --dca-gray-light: #888; // $gray-light;
-       --dca-gray-darker: #aaa; //$gray;
-       --dca-gray-darkest: #eee; // $gray-lighter;
-       --dca-gray-super-lightest: #333;
+    :root:not([data-color-scheme]) {
+        --dca-dark-mode: " ";
+        --dca-white: #2A2C2E;
+        --dca-black: #FFF;
+        --dca-primary: #58D1FC;
+        --dca-gray: #999; // $gray-light;
+        --dca-gray-lightest: #444; //$gray-darkest;
+        --dca-gray-lighter: #666; //$gray-darker;
+        --dca-gray-light: #888; // $gray-light;
+        --dca-gray-darker: #aaa; //$gray;
+        --dca-gray-darkest: #eee; // $gray-lighter;
+        --dca-gray-super-lightest: #333;
+
+        --active-brightness: 2;
+        --focus-brightness: 1.5;
     }
 }
 
