--- a/djangocms_admin_style/sass/settings/_reset-django-dark-mode.scss
+++ b/djangocms_admin_style/sass/settings/_reset-django-dark-mode.scss
@@ -1,51 +1,88 @@
-:root.cms-light-mode {
-    --primary: inherit;
-    --secondary: inherit;
-    --accent: inherit;
-    --primary-fg: inherit;
+:root[data-color-scheme="light"] {
+    --primary: #79aec8;
+    --secondary: #417690;
+    --accent: #f5dd5d;
+    --primary-fg: #fff;
 
-    --body-fg: inherit;
-    --body-bg: inherit;
-    --body-quiet-color: inherit;
-    --body-loud-color: inherit;
+    --body-fg: #333;
+    --body-bg: #fff;
+    --body-quiet-color: #666;
+    --body-loud-color: #000;
 
-    --header-color: inherit;
-    --header-branding-color: inherit;
-    --header-bg: inherit;
-    --header-link-color: inherit;
+    --header-color: #ffc;
+    --header-branding-color: var(--accent);
+    --header-bg: var(--secondary);
+    --header-link-color: var(--primary-fg);
 
-    --breadcrumbs-fg: inherit;
-    --breadcrumbs-link-fg: inherit;
-    --breadcrumbs-bg: inherit;
+    --breadcrumbs-fg: #c4dce8;
+    --breadcrumbs-link-fg: var(--body-bg);
+    --breadcrumbs-bg: var(--primary);
 
-    --link-fg: inherit;
-    --link-hover-color: inherit;
-    --link-selected-fg: inherit;
+    --link-fg: #447e9b;
+    --link-hover-color: #036;
+    --link-selected-fg: #5b80b2;
 
-    --hairline-color: inherit;
-    --border-color: inherit;
+    --hairline-color: #e8e8e8;
+    --border-color: #ccc;
 
-    --error-fg: inherit;
+    --error-fg: #ba2121;
 
-    --message-success-bg: inherit;
-    --message-warning-bg: inherit;
-    --message-error-bg: inherit;
+    --message-success-bg: #dfd;
+    --message-warning-bg: #ffc;
+    --message-error-bg: #ffefef;
 
-    --darkened-bg: inherit; /* A bit darker than --body-bg */
-    --selected-bg: inherit; /* E.g. selected table cells */
-    --selected-row: inherit;
+    --darkened-bg: #f8f8f8; /* A bit darker than --body-bg */
+    --selected-bg: #e4e4e4; /* E.g. selected table cells */
+    --selected-row: #ffc;
 
-    --button-fg: inherit;
-    --button-bg: inherit;
-    --button-hover-bg: inherit;
-    --default-button-bg: inherit;
-    --default-button-hover-bg: inherit;
-    --close-button-bg: inherit; /* Previously #bbb, contrast 1.92 */
-    --close-button-hover-bg: inherit;
-    --delete-button-bg: inherit;
-    --delete-button-hover-bg: inherit;
+    --button-fg: #fff;
+    --button-bg: var(--primary);
+    --button-hover-bg: #609ab6;
+    --default-button-bg: var(--secondary);
+    --default-button-hover-bg: #205067;
+    --close-button-bg: #888; /* Previously #bbb, contrast 1.92 */
+    --close-button-hover-bg: #747474;
+    --delete-button-bg: #ba2121;
+    --delete-button-hover-bg: #a41515;
 
-    --object-tools-fg: inherit;
-    --object-tools-bg: inherit;
-    --object-tools-hover-bg: inherit;
+    --object-tools-fg: var(--button-fg);
+    --object-tools-bg: var(--close-button-bg);
+    --object-tools-hover-bg: var(--close-button-hover-bg);
+}
+
+:root[data-color-scheme="dark"] {
+    --primary: #264b5d;
+    --primary-fg: #f7f7f7;
+
+    --body-fg: #eeeeee;
+    --body-bg: #121212;
+    --body-quiet-color: #e0e0e0;
+    --body-loud-color: #ffffff;
+
+    --breadcrumbs-link-fg: #e0e0e0;
+    --breadcrumbs-bg: var(--primary);
+
+    --link-fg: #81d4fa;
+    --link-hover-color: #4ac1f7;
+    --link-selected-fg: #6f94c6;
+
+    --hairline-color: #272727;
+    --border-color: #353535;
+
+    --error-fg: #e35f5f;
+    --message-success-bg: #006b1b;
+    --message-warning-bg: #583305;
+    --message-error-bg: #570808;
+
+    --darkened-bg: #212121;
+    --selected-bg: #1b1b1b;
+    --selected-row: #00363a;
+
+    --close-button-bg: #333333;
+    --close-button-hover-bg: #666666;
+
+
+    --object-tools-fg: var(--button-fg);
+    --object-tools-bg: var(--close-button-bg);
+    --object-tools-hover-bg: var(--close-button-hover-bg);
 }
